--- a/app/src/main/res/layout/activity_addaccount.xml
+++ b/app/src/main/res/layout/activity_addaccount.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/addaccount_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <include
         android:id="@+id/toolbar"
-        android:layout="@layout/toolbar"/>
-
-    <FrameLayout
-        android:id="@+id/addaccount_frame"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-    </FrameLayout>
+        layout="@layout/toolbar"/>
 
 
-</LinearLayout>
+</RelativeLayout>
