--- a/app/src/main/res/layout/activity_budget.xml
+++ b/app/src/main/res/layout/activity_budget.xml
@@ -6,4 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".DisplayBudgetActivity">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"/>
+
 </RelativeLayout>
