--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="?android:actionBarSize"
     >
     <RelativeLayout
         android:id="@+id/reports_header_layout"
@@ -13,19 +14,14 @@
         android:elevation="3dp">
         <TextView
             android:id="@+id/reports_month_label"
-
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="25dp"
             android:layout_marginTop="0dp"
             android:layout_marginBottom="0dp"
-
             android:text="Selected Month:"
             android:textColor="@color/white"
-
-
             android:textSize="18sp" />
-
 
         <TextView
             android:id="@+id/reports_month_value"
