--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -12,6 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
+
     </LinearLayout>
 
     <ListView
@@ -21,6 +23,7 @@
         android:layout_gravity="start"
         android:divider="@null"
         android:choiceMode="singleChoice"
+        android:layout_marginTop="?android:actionBarSize"
         android:background="@color/white">
 
     </ListView>
