--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -2,12 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <include
-        android:id="@id/toolbar"
-        layout="@layout/toolbar"
-        />
+    android:layout_height="match_parent"
+    android:layout_marginTop="?android:actionBarSize">
 
 
     <ListView
