--- a/app/src/main/res/layout/fragment_budget.xml
+++ b/app/src/main/res/layout/fragment_budget.xml
@@ -3,9 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-
+    android:layout_marginTop="?android:actionBarSize">
 
     <ListView
         android:id="@+id/budget_listview"
