--- a/app/src/main/res/layout/fragment_budgethistory.xml
+++ b/app/src/main/res/layout/fragment_budgethistory.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FAFAFA"
-    android:orientation="vertical">
+    android:layout_marginTop="?android:actionBarSize">
 
     <com.androidplot.xy.XYPlot
         android:id="@+id/xy_history_plot"
