--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,13 +3,14 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="@style/Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
 
         <item name="logo">@android:color/transparent</item>
-        <item name="android:actionBarStyle">@style/MyActionBar</item>
+        <item name="actionBarStyle">@style/MyActionBar</item>
         <item name="android:textViewStyle">@style/MyTextViewStyle</item>
 
-        <item name="android:buttonStyle">@style/MyButtonStyle</item>
+        <item name="buttonStyle">@style/MyButtonStyle</item>
         <item name="drawerArrowStyle">@style/MyDrawerArrowStyle</item>
         <item name="spinnerStyle">@style/MySpinnerStyle</item>
 
@@ -47,7 +48,7 @@
 
 
 
-    <style name="MySpinnerStyle" parent="style/Widget.AppCompat.Spinner">
+    <style name="MySpinnerStyle" parent="@android:style/Widget.Holo.Spinner">
         <item name="background">@android:drawable/spinner_background</item>
         <item name="android:tint">@color/white</item>
     </style>
