--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"/>
+
+<android.support.v4.widget.DrawerLayout
+
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_below="@id/toolbar"
     android:orientation="vertical">
 
     <LinearLayout
@@ -11,8 +21,6 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-
 
     </LinearLayout>
 
@@ -23,9 +31,11 @@
         android:layout_gravity="start"
         android:divider="@null"
         android:choiceMode="singleChoice"
-        android:layout_marginTop="?android:actionBarSize"
+
         android:background="@color/white">
 
     </ListView>
 
 </android.support.v4.widget.DrawerLayout>
+
+</RelativeLayout>
