--- a/app/src/main/res/layout/list_item_account.xml
+++ b/app/src/main/res/layout/list_item_account.xml
@@ -16,29 +16,29 @@
         card_view:cardElevation="2sp"
         card_view:cardUseCompatPadding="true">
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/list_item_account"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            >
 
             <LinearLayout
+                android:id="@+id/account_desc_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
+                android:layout_centerVertical="true"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/list_item_account_name_textview"
 
-                    android:layout_width="220dp"
+                    android:layout_width="160dp"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
-                    android:gravity="center_vertical"
                     android:singleLine="true"
-                    android:text="Vanguard Brokerage"
-                    android:textSize="20sp" />
+                    android:text="Vanguard Brokerage Account"
+                    android:textSize="16sp" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -68,15 +68,18 @@
 
             <TextView
                 android:id="@+id/list_item_account_balance_textview"
-                android:layout_width="wrap_content"
+                android:layout_width="140dp"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:gravity="right|center_vertical"
-                android:text="$1,337.40"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:gravity="end"
+                android:layout_marginEnd="10dp"
+                android:singleLine="true"
+                android:ellipsize="end"
+                tools:text="$55,115,337.40"
                 android:textSize="20sp" />
 
-        </LinearLayout>
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
