--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,15 +7,19 @@
         <item name="windowActionBar">false</item>
 
         <item name="logo">@android:color/transparent</item>
-        <item name="actionBarStyle">@style/MyActionBar</item>
+
+        <item name="actionOverflowMenuStyle">@style/MyActionOverflowMenuStyle</item>
+
         <item name="android:textViewStyle">@style/MyTextViewStyle</item>
 
         <item name="buttonStyle">@style/MyButtonStyle</item>
         <item name="drawerArrowStyle">@style/MyDrawerArrowStyle</item>
         <item name="spinnerStyle">@style/MySpinnerStyle</item>
 
-
         <item name="alertDialogTheme">@style/MyAlertDialogTheme</item>
+        <item name="android:alertDialogTheme">@style/MyAlertDialogTheme</item>
+        <item name="dialogTheme">@style/MyDialogTheme</item>
+        <item name="android:dialogTheme">@style/MyDialogTheme</item>
 
         <!-- http://scriptedpapers.com/2015/02/12/android-action-bar-and-overflow-menu-customization-with-theme-appcompat/ -->
         <item name="dropDownListViewStyle">@style/MyDropDownListViewStyle</item>
@@ -24,28 +28,31 @@
         <item name="colorPrimaryDark">@color/theme_darker</item>
         <item name="colorAccent">@color/theme</item>
 
-<!-- http://stackoverflow.com/questions/28738089/change-datepicker-dialog-color-for-android-5-0 -->
+
+        <!-- http://stackoverflow.com/questions/28738089/change-datepicker-dialog-color-for-android-5-0 -->
 
     </style>
 
-    <style name="MyDatePickerDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+    <style name="MyActionOverflowMenuStyle" parent="Widget.AppCompat.Light.PopupMenu.Overflow">
+        <item name="android:textSize">16sp</item>
+
+    </style>
+
+
+    <style name="MyDialogTheme" parent="Theme.AppCompat.Light.Dialog">
         <item name="colorAccent">@color/theme</item>
         <item name="android:textColorPrimary">@color/textview</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
     </style>
-
-
 
     <style name="MyAlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="colorAccent">@color/theme</item>
         <item name="android:textColorPrimary">@color/textview</item>
-
     </style>
 
     <style name="MyDropDownListViewStyle" parent="Widget.AppCompat.Light.ListView.DropDown">
         <item name="android:background">#fafafa</item>
     </style>
-
-
 
 
     <style name="MySpinnerStyle" parent="@android:style/Widget.Holo.Spinner">
@@ -69,16 +76,8 @@
         <item name="android:textSize">14sp</item>
 
 
-
-
     </style>
 
-    <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
-        <item name="android:background">@color/theme</item>
-        <item name="android:titleTextStyle">@style/TitleTextStyle</item>
-        <item name="titleTextStyle">@style/TitleTextStyle</item>
-
-    </style>
 
     <style name="NoShadow" parent="style/AppTheme">
         <item name="android:windowContentOverlay">@null</item>
@@ -90,8 +89,21 @@
         <item name="colorAccent">@color/white</item>
     </style>
 
-    <style name="TitleTextStyle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
-        <item name="android:textColor">@color/title_text</item>
+    <style name="ActionBarThemeOverlay" parent="">
+        <item name="android:textColorPrimary">@color/white</item>
+
+        <item name="colorControlNormal">#fff</item>
+        <item name="colorControlHighlight">#3fff</item>
+    </style>
+
+    <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">regular</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="Toolbar.MenuText" parent="TextAppearance.Widget.AppCompat.ExpandedMenu.Item">
+        <item name="android:textSize">16sp</item>
 
     </style>
 
@@ -102,17 +114,16 @@
     </style>
 
 
+    <style name="Widget"></style>
 
-    <style name="Widget">
-    </style>
-
-    <style name="Widget.ProgressBar">
-    </style>
+    <style name="Widget.ProgressBar"></style>
 
     <style name="Widget.ProgressBar.Vertical">
         <item name="android:indeterminateOnly">false</item>
         <item name="android:progressDrawable">@drawable/vertical_progressbar</item>
-        <item name="android:indeterminateDrawable">@android:drawable/progress_indeterminate_horizontal</item>
+        <item name="android:indeterminateDrawable">
+            @android:drawable/progress_indeterminate_horizontal
+        </item>
         <item name="android:minWidth">1dip</item>
         <item name="android:maxWidth">12dip</item>
     </style>
