--- a/app/src/main/res/layout/dialog_transaction.xml
+++ b/app/src/main/res/layout/dialog_transaction.xml
@@ -31,6 +31,7 @@
         android:id="@+id/transaction_category_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:minWidth="120dp"
         android:maxWidth="160dp"
         android:layout_alignBaseline="@+id/trans_category_label"
         android:layout_alignParentRight="true"
@@ -61,6 +62,7 @@
         android:id="@+id/transaction_amount_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:minWidth="120dp"
         android:maxWidth="160dp"
         android:layout_alignBaseline="@id/trans_amount_label"
         android:layout_alignParentRight="true"
@@ -86,7 +88,7 @@
     <EditText
         android:id="@+id/transaction_date_edit"
         style="@android:style/Widget.EditText"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:maxWidth="160dp"
         android:layout_alignBaseline="@id/trans_date_label"
