--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    >
 
     <include
         android:id="@+id/toolbar"
@@ -25,7 +25,8 @@
         android:layout_width="85dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
+        android:layout_below="@id/pin_title_splash"
+        android:layout_marginTop="0dp"
         android:inputType="numberPassword"
         android:editable="true"
         android:focusable="true"
